--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./perfect-scrollbar-1.4.0/dist/perfect-scrollbar.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./perfect-scrollbar-1.4.0/css/perfect-scrollbar.css">
     <link rel="stylesheet" href="styles.css">
     <title>Excel Clone</title>
 </head>
@@ -91,15 +94,16 @@
         </div>
         <div class="data-container">
             <div id="select-all"></div>
-            <div id="columns">
-                <div class="column-name">A</div>
-                <div class="column-name">B</div>
-            </div>
+            <div id="columns"></div>
             <div id="rows"></div>
-            <div id="cells"></div>
+            <div id="cells">
+                <div class="cell-row"></div>
+            </div>
         </div>
         <div class="sheet-bar"></div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
