--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./resources/perfect-scrollbar-1.4.0/dist/perfect-scrollbar.js"></script>
+    <script src="./resources/Flat-HTML5-Palette-Color-Picker-For-jQuery-colorPick-js/src/colorPick.js"></script>
     <link rel="stylesheet" href="./resources/perfect-scrollbar-1.4.0/css/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="./resources/Flat-HTML5-Palette-Color-Picker-For-jQuery-colorPick-js/src/colorPick.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>Excel Sheets</title>
@@ -62,11 +64,13 @@
             <div class="material-icons menu-icon" id="bold">format_bold</div>
             <div class="material-icons menu-icon" id="italic">format_italic</div>
             <div class="material-icons menu-icon" id="underlined">format_underlined</div>
-            <div class="material-icons menu-icon">format_color_fill</div>
-            <div class="material-icons menu-icon">text_format</div>
-            <div class="material-icons menu-icon">format_align_left</div>
-            <div class="material-icons menu-icon">format_align_center</div>
-            <div class="material-icons menu-icon">format_align_right</div>
+            <div class="material-icons menu-icon pick-color"><img id="fill-color"
+                    src="https://img.icons8.com/material-sharp/24/000000/fill-color.png" /></div>
+            <div class="material-icons menu-icon pick-color"><img id="text-color"
+                    src="https://img.icons8.com/material-sharp/24/000000/generic-text.png" /></div>
+            <div class="material-icons menu-icon alignment selected" data-type="left">format_align_left</div>
+            <div class="material-icons menu-icon alignment" data-type="center">format_align_center</div>
+            <div class="material-icons menu-icon alignment" data-type="right">format_align_right</div>
 
         </div>
         <div class="formula-bar">
