Added sheet bar

--- a/index.html
+++ b/index.html
@@ -95,7 +95,16 @@
             <div id="rows"></div>
             <div id="cells"></div>
         </div>
-        <div class="sheet-bar"></div>
+        <div class="sheet-bar">
+            <div class="sheet-scroll">
+                <div class="material-icons scroller scroll-left">arrow_left</div>
+                <div class="material-icons scroller scroll-right">arrow_right</div>
+            </div>
+            <div class="material-icons add-sheet">add_circle</div>
+            <div class="sheets-tab">
+                <div class="sheet selected">Sheet 1</div>
+            </div>
+        </div>
     </div>
 
     <script src="./script.js"></script>
