--- a/index.html
+++ b/index.html
@@ -103,8 +103,13 @@
             <div class="material-icons add-sheet">add_circle</div>
             <div class="sheets-tab">
                 <div class="sheet selected">Sheet 1</div>
+                <div class="sheet">Sheet 2</div>
             </div>
         </div>
+        <!-- <div class="sheet-options-modal">
+            <div class="option sheet-rename">Rename</div>
+            <div class="option sheet-delete">Delete</div>
+        </div> -->
     </div>
 
     <script src="./script.js"></script>
