--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
             <div id="cells"></div>
         </div>
         <div class="sheet-bar">
-            <div class="sheet-scroll">
+            <div class="sheet-scroller">
                 <div class="material-icons scroller scroll-left">arrow_left</div>
                 <div class="material-icons scroller scroll-right">arrow_right</div>
             </div>
             <div class="material-icons add-sheet">add_circle</div>
-            <div class="sheets-tab">
-                <div class="sheet selected">Sheet 1</div>
+            <div class="sheets-tab-container">
+                <div class="sheet-tab selected">Sheet1</div>
             </div>
         </div>
         <!-- <div class="sheet-options-modal">
