--- a/index.html
+++ b/index.html
@@ -109,6 +109,43 @@
             <div class="option sheet-rename">Rename</div>
             <div class="option sheet-delete">Delete</div>
         </div> -->
+
+        <!-- Modals for Rename and delete options -->
+        <!-- <div class="sheet-modal-parent">
+            <div class="sheet-rename-modal">
+                <div class="sheet-modal-title">Rename Sheet</div>
+                <div class="sheet-modal-input-container">
+                    <span class="sheet-modal-input-title">Rename Sheet To: </span>
+                    <input type="text" class="sheet-modal-input" />
+                </div>
+                <div class="sheet-modal-confirmation">
+                    <div class="button yes-btn">OK</div>
+                    <div class="button no-btn">Cancel</div>
+                </div>
+            </div>
+        </div> -->
+
+        <!-- <div class="sheet-modal-parent">
+            <div class="sheet-delete-modal">
+                <div class="sheet-modal-title">Sheet Name</div>
+                <div class="sheet-modal-detail-container">
+                    <span class="sheet-modal-detail-title">Are you sure?</span>
+                </div>
+                <div class="sheet-modal-confirmation">
+                    <div class="button yes-btn">
+                        <div class="material-icons delete-icon">delete</div>
+                        Delete
+                    </div>
+                    <div class="button no-btn">Cancel</div>
+                </div>
+            </div>
+        </div> -->
+
+        <!-- <div class="sheet-modal-parent">
+            <div class="alert-box">
+                <span class="alert-text">Not Possible!</span>
+            </div>
+        </div> -->
     </div>
 
     <script src="./script.js"></script>
