--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="app-container">
         <div class="title-bar">Excel - Book</div>
         <div class="menu-bar">
-            <div class="menu-bar-item file">File</div>
+            <div class="menu-bar-item" id="menu-file">File</div>
             <div class="menu-bar-item selected">Home</div>
             <div class="menu-bar-item">Insert</div>
             <div class="menu-bar-item">Page Layout</div>
@@ -166,6 +166,7 @@
                 </div>
             </div>
             <div class="file-recent-modal"></div>
+            <div class="file-transparent"></div>
         </div> -->
     </div>
 
