[feat] Open File

--- a/index.html
+++ b/index.html
@@ -168,9 +168,18 @@
             <div class="file-recent-modal"></div>
             <div class="file-transparent"></div>
         </div> -->
-    </div>
 
-    <script src="./script.js"></script>
+        <!-- <div class="sheet-modal-parent">
+            <div class="sheet-open-modal">
+                <div class="material-icons close-open-file">close</div>
+                <div class="sheet-modal-title">Open File</div>
+                <div class="sheet-modal-input-container">
+                    <input type="file" class="file-open" accept="json" />
+                </div>
+            </div>
+        </div> -->
+
+        <script src="./script.js"></script>
 </body>
 
 </html>
