Select-all widget added

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
             <div id="formula-input" contenteditable="true"></div>
         </div>
         <div class="data-container">
-            <div id="select-all"></div>
+            <div id="select-all">
+                <div class="widget"></div>
+            </div>
             <div id="columns"></div>
             <div id="rows"></div>
             <div id="cells"></div>
